Fix overflow issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@ body,
 }
 
 body {
-  height: 100vh;
+  /* min-height: 100vh; */
   background-color: transparent;
 }
 
@@ -135,7 +135,7 @@ input[type='submit'] {
   padding: 1.4em 2em;
   flex: 2;
   width: 100%;
-  height: 60%;
+  max-height: 80vh;
   color: $color-green;
   text-decoration: none;
   border: 1px solid $color-green;
@@ -149,7 +149,7 @@ input[type='submit'] {
 }
 
 .CharacterList {
-  height: 65%;
+  height: 60vh;
   visibility: collapse;
   overflow:hidden;
   overflow-y:scroll;
@@ -161,9 +161,10 @@ input[type='submit'] {
   }
   &::-webkit-scrollbar-thumb {
     background-color: $color-green;
-    height: 60%;
+    /* height: 60%; */
     border: .01em solid $font-color;
-  }
+  } 
+  
 }
 
 .CharacterListItem {
